--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -245,6 +245,7 @@ h4,h5{
         letter-spacing: 5px;
         padding: 25px 35px;
         margin: 30px 0;
+        font-size: 25px;
     }
 #home p
     {
