--- a/css/jquery.fullPage.css
+++ b/css/jquery.fullPage.css
@@ -1,9 +1,9 @@
 /**
  * fullPage 2.6.0
- * https://github.com/alvarotrigo/fullPage.js
+ * https://tharunaditya.github.io/
  * MIT licensed
  *
- * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
+ * Copyright (C) 2023 alvarotrigo.com - A project by Alvaro Trigo
  */
 html, body {
     margin: 0;
