Add comprehensive blog enhancements: reading time, progress bar, TOC, author bio, related posts, back to top, copy code, print, breadcrumbs, search, comments, and newsletter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,5 +126,6 @@
 
     <!-- JavaScript -->
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/blog.js' | relative_url }}"></script>
 </body>
 </html>
